# sundae-balius-server

./: .gitignore  Cargo.toml  README.md  build-workers.sh  dollar-cost-average.sh
.github/workflows/: publish.yaml  tests.yaml
balius-server/: Cargo.toml  config.base.yaml  config.example.yaml
balius-server/src/: keys.rs  main.rs  worker.rs
balius-server/workers/: dollar-cost-average.wasm  trailing-stop-loss.wasm
balius-worker-builder/: Cargo.toml
balius-worker-builder/src/: main.rs
src/: config.rs  error.rs  main.rs  worker.rs
src/worker/: kv.rs
sundae-strategies/: Cargo.toml
sundae-strategies/src/: keys.rs  lib.rs  types.rs
workers/dollar-cost-average/: Cargo.toml  baliusd.toml  dca.json
workers/dollar-cost-average/src/: config.rs  lib.rs  types.rs  utils.rs
workers/hosky-always-lose/: Cargo.toml  baliusd.toml  hal.json
workers/hosky-always-lose/src/: config.rs  lib.rs
workers/hosky-trading-strategy/: Cargo.toml  baliusd.toml
workers/trailing-stop-loss/: Cargo.toml  baliusd.toml  tsl.json
workers/trailing-stop-loss/src/: config.rs  lib.rs
