[workspace]
resolver = "3"

members = [
    "balius-server",
    "balius-worker-builder",
    "sundae-strategies",
    "workers/*",
]

[workspace.dependencies]
balius-runtime = { git = "https://github.com/txpipe/balius.git", version = "0.5" }
balius-sdk = { git = "https://github.com/txpipe/balius.git", version = "0.5" }
