[package]
name = "sundae-strategies"
version = "0.1.3"
edition = "2024"
description = "Helper library to develop Sundae strategies"
license = "Apache-2.0"
repository = "https://github.com/SundaeSwap-finance/sundae-balius-server/"
readme = "../README.md"

[dependencies]
balius-sdk = { workspace = true }
hex = "0.4"
plutus-parser = { version = "0.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
utxorpc-spec = "0.16"
tracing = "0.1"

[lib]
crate-type = ["lib"]
