[package]
name = "dollar-cost-average"
version = "0.1.0"
edition = "2024"

[dependencies]
balius-sdk = { git = "https://github.com/txpipe/balius.git", rev = "43d124d" }
hex = "0.4"
plutus-parser = { git = "https://github.com/SundaeSwap-finance/plutus-parser.git", rev = "91a7f44", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
utxorpc-spec = "0.16"
tracing = "0.1"

[lib]
crate-type = ["cdylib"]